@@ -1,4 +1,6 @@
 0.3.0
+Basic hightlight current line.
+Basic line numbers.
 Synched gtk code v0.2.6 to 0.3.0
 Basic function menu.
 Basic load prefs.
